--- a/in6.html
+++ b/in6.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header class="custom-header">
-  <h1><i class="fa-solid fa-note-sticky"></i> <br>Catatan & Pengingat</h1>
+  <h1><i class="fa-solid fa-note-sticky"></i> Catatan & Pengingat</h1>
   <p id="hariIni"></p>
   <p id="waktuSekarang"></p>
 </header>
